Added quickcheck suite, fixed bug and better balancing in SplayHeap

--- a/search.cabal
+++ b/search.cabal
@@ -21,7 +21,8 @@ executable benchmark
                        hashmap,
                        hashable,
                        heaps,
-                       llrbtree
+                       llrbtree,
+                       QuickCheck
   hs-source-dirs:      src
 
 Test-Suite all_tests
